--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "mongoose": "^8.0.3",
-    "nodemailer": "^6.9.7",
+    "resend": "^4.0.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
